Fix action spacing issues on generic pages [WEB-801]

--- a/frontend/scss/molecules/_m-article-actions.scss
+++ b/frontend/scss/molecules/_m-article-actions.scss
@@ -2,13 +2,14 @@
   display: flex;
   flex-flow: row wrap;
   margin-bottom: 40px;
+  margin-top: 8px;
 
   .o-form.o-blocks__block + & {
     display: none;
   }
 }
 
-.m-article-actions:first-child {
+.o-article__primary-actions .m-article-actions {
   margin-top: 0;
 }
 
